package invalid;

public interface Shape {
    Double getArea();
    Double getVolume();
    Double getPerimeter();
}
