package valid;

public interface Shape2D extends Shape {
    Double getArea();
    Double getPerimeter();
}
