package valid;

public interface Shape3D extends Shape {
    Double getArea();
    Double getVolume();
}
